// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> matches snapshot 1`] = `
<Button
  className="sc-AxjAm bKCvEV atque et non explicabo dolores ipsam laboriosam"
  disabled={false}
  displayType="outline"
  onClick={[MockFunction]}
  type="submit"
>
  Sed exercitationem omnis laborum. Est sapiente laudantium molestias assumenda. Adipisci mollitia iste. Omnis debitis rem similique temporibus aliquam sed sapiente soluta corporis. Eaque nisi cum ducimus nemo doloremque.
</Button>
`;

exports[`<Button> matches snapshot 2`] = `
<Button
  className="sc-AxjAm iiZAfZ odit animi in ut occaecati at odit"
  disabled={false}
  displayType="solid"
  onClick={[MockFunction]}
  type="button"
>
  <div
    key="46760116-acd2-466d-a805-bb010e05cef4"
  >
    quae corporis qui aut nobis quo consequatur
  </div>
</Button>
`;

exports[`<Button> matches snapshot 3`] = `
<Button
  className="sc-AxjAm iiZAfZ non quis quis nobis repudiandae aliquam molestiae"
  disabled={false}
  displayType="solid"
  onClick={[MockFunction]}
  type="submit"
>
  Nobis nam dolor quas repellendus in dolores totam animi ipsum. Et consequatur consectetur sunt molestiae cupiditate autem. Consequatur accusantium molestiae. Sint et ipsa consequuntur quidem dolorem quia consequatur omnis ab.
</Button>
`;

exports[`<Button> matches snapshot 4`] = `
<Button
  className="sc-AxjAm gKYImC consequatur ipsam sed nobis excepturi saepe autem"
  disabled={true}
  displayType="outline"
  onClick={[MockFunction]}
  type="submit"
>
  <div
    key="8abf9796-e716-4293-8252-0eb19c9de4c7"
  >
    quia assumenda ut neque saepe est labore
  </div>
</Button>
`;

exports[`<Button> matches snapshot 5`] = `
<Button
  className="sc-AxjAm bKCvEV quia cumque architecto eos quos tenetur voluptas"
  disabled={false}
  displayType="outline"
  onClick={[MockFunction]}
  type="button"
>
  Quis sed ea qui minima laboriosam tempore voluptatibus reiciendis ut. Commodi at impedit sint perferendis in dolorem repudiandae possimus. Esse qui est aut laborum nesciunt. Vero voluptate esse aliquam. Quas omnis qui illo excepturi esse porro impedit omnis.
</Button>
`;

exports[`<Button> matches snapshot 6`] = `
<Button
  className="sc-AxjAm gKYImC quas eligendi ut officiis sed illum et"
  disabled={true}
  displayType="outline"
  onClick={[MockFunction]}
  type="submit"
>
  <span
    key="dd632bbb-9072-4542-aacb-6ec3d2fc86fb"
  >
    qui ab officiis omnis rem officiis et
  </span>
</Button>
`;

exports[`<Button> matches snapshot 7`] = `
<Button
  className="sc-AxjAm gKYImC fuga rem eius est nihil sit enim"
  disabled={true}
  displayType="outline"
  onClick={[MockFunction]}
  type="reset"
>
  Quam sit optio rerum quasi. Modi soluta hic omnis atque inventore vitae. Eligendi quis excepturi veritatis occaecati odit in. Sunt ipsum saepe veritatis quisquam eius dolore quia error. Asperiores amet et quos repellat distinctio libero. Facilis est laboriosam tempora aut cupiditate aut.
</Button>
`;

exports[`<Button> matches snapshot 8`] = `
<Button
  className="sc-AxjAm gKYImC odit quo enim facere illo nemo iusto"
  disabled={true}
  displayType="outline"
  onClick={[MockFunction]}
  type="submit"
>
  Omnis ut praesentium vel earum quo. Et ut voluptate delectus officia maiores cumque consequuntur rerum. Nulla aut omnis blanditiis.
</Button>
`;
